# shinyreporter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: Makefile  conf.py  example.md  make.bat
drawio/: shinyreporter(2).drawio  shinyreporter1.drawio
examples/: app.py
src/shinyreporter/: Blocks.py  ContentBlock.py  RendererDispatch.py  Report.py  ShinyRenderer.py  StringBlock.py  __init__.py  report_module.py  type_aliases.py
tests/: test_contentblock.py
